# AI-AGENTS-BASICS-CHATBOT

./: main.py  pyproject.toml  requirements.txt
BasicChatBot/: basicchatbot.ipynb
Debugging/: agent.py  debugging.ipynb
HumanAssistance/: humanintheloop.ipynb
